# audio-classification-icbhi

./: .gitignore  README.md  cli.py  config.yaml  config_segmented.yaml  diagnose_data.py  generate_confusion_matrix.py  generate_confusion_matrix_from_runs.py  interactive_analyzer.py  preprocess_icbhi.py  pyproject.toml  quick_confusion_matrix.py  realtime_analyzer.py  realtime_analyzer_parallel.py  realtime_analyzer_parallel_p.py  realtime_analyzer_spec.py  realtime_analyzer_timeline.py  requirements.txt  train.py  train_segmented.py  training_icbhi.py  validate.py
analysis_results/: test_audio_1_detections.csv  test_audio_1_results.csv  test_audio_1_results_t0.60.csv
data/: preprocessing_flexible.py
src/: __init__.py
src/data/: __init__.py  dataset.py  dataset_segmented.py  preprocessing.py
src/models/: __init__.py
src/modes/: cnn.py  resnet.py
src/training/: __init__.py  trainer.py  trainer_fixed.py  trainer_icbhi.py  validate_icbhi.py  validation.py
src/utils/: __init__.py  config.py  icbhi_metrics.py  metrics.py
